Fixed overflow issue caused by section card animation

--- a/src/assets/App.module.css
+++ b/src/assets/App.module.css
@@ -170,7 +170,7 @@ ul, ol {
   width: 100%;
   max-width: var(--max-width);
   margin: 0 auto;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 
 .__indent-text {
